Add navigation menu styles

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 title: Home
 ---
 
-<h1>{{ "Hello World" | downcase }}</h1>
+<h1>{{ "Home" }}</h1>
 
-<p>{{ "Paragraph" }}</p>
+<p>{{ "Home sweet home" }}</p>
 
 <button>{{"Button"}}</button>
