--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Home
 ---
 
-<header class="image-background" style="padding: 5px;">
+<header class="home-image-background" style="padding: 5px;">
     <div class="display-left text-white" style="padding: 48px;">
         <div>
             <span class="extra-large-title">Home</span>
