Fix about page auto layout. Add more authors

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@ title: Contact us
 permalink: /contact/
 ---
 
-<div class="contact-container">
+<div class="page-container">
     <h3 class="text-center large-title">Contact page</h3>
     <p class="text-center middle-title">This page tells how can you contact with us.</p>
     <div class="icon">
@@ -16,14 +16,10 @@ permalink: /contact/
             <p><input type="text" placeholder="Email" name="email"></p>
             <p><input type="text" placeholder="Subject" name="subject"></p>
             <p><input type="text" placeholder="Message" name="message"></p>
-<!--            <p><input type="text" placeholder="Name" required name="Name"></p>-->
-<!--            <p><input type="text" placeholder="Email" required name="Email"></p>-->
-<!--            <p><input type="text" placeholder="Subject" required name="Subject"></p>-->
-<!--            <p><input type="text" placeholder="Message" required name="Message"></p>-->
             <button id="submitButton" class="button" type="submit"><i class="button-icon button-icon-paper-plane"></i> SEND MESSAGE</button>
         </form>
         <!-- Image of location -->
         <img src="/assets/images/map.jpg" class="map-image">
     </div>
 </div>
-<script src="/assets/js/handlers.js"></script>
+<script src="/assets/js/validationHandlers.js"></script>
