--- a/pages/about.html
+++ b/pages/about.html
@@ -3,12 +3,12 @@ title: About
 permalink: /about/
 ---
 
-<div class="about-container">
-    <h3 class="text-center">About this project</h3>
+<div class="page-container" style="height: 100%;">
+    <h3 class="text-center large-title">About this project</h3>
     <p class="text-center middle-title">Key features of this project</p>
-    <div class="row-padding text-center">
+    <div class="row text-center">
         {% for item in site.data.about %}
-            <div class="quarter">
+            <div class="about-card">
                 <i class="{{ item.class }}"></i>
                 <p class="middle-title">{{ item.title }}</p>
                 <p>{{ item.content }}</p>
