--- a/pages/staff.html
+++ b/pages/staff.html
@@ -3,15 +3,23 @@ title: Staff
 permalink: /staff/
 ---
 
-<h1>Staff</h1>
-
-<ul>
-    {% for author in site.authors %}
-        <li>
-            <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
-            <h3>{{ author.position }}</h3>
-            <p>{{ author.content | markdownify }}</p>
-        </li>
-        <hr>
-    {% endfor %}
-</ul>
+<div class="page-container">
+    <h3 class="text-center large-title">Staff</h3>
+    <p class="text-center middle-title">The ones who care about apples</p>
+    <div class="row">
+        {% for author in site.authors %}
+            <div class="author-card">
+                <img
+                    {% if author.gender == "male" %}
+                        src="/assets/images/icons/personMale.png"
+                    {% else %}
+                        src="/assets/images/icons/personFemale.png"
+                    {% endif %}
+                >
+                <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
+                <h3>{{ author.position }}</h3>
+                <p>{{ author.content | markdownify }}</p>
+            </div>
+        {% endfor %}
+    </div>
+</div>
