Fix staff page layout

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -8,17 +8,19 @@ permalink: /staff/
     <p class="text-center middle-title">The ones who care about apples</p>
     <div class="row">
         {% for author in site.authors %}
-            <div class="author-card">
-                <img
-                    {% if author.gender == "male" %}
-                        src="/assets/images/icons/personMale.png"
-                    {% else %}
-                        src="/assets/images/icons/personFemale.png"
-                    {% endif %}
-                >
-                <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
-                <h3>{{ author.position }}</h3>
-                <p>{{ author.content | markdownify }}</p>
+            <div class="author-container">
+                <div class="author-card">
+                    <img
+                        {% if author.gender == "male" %}
+                            src="/assets/images/icons/personMale.png"
+                        {% else %}
+                            src="/assets/images/icons/personFemale.png"
+                        {% endif %}
+                    >
+                    <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
+                    <h3>{{ author.position }}</h3>
+                    <p>{{ author.content | markdownify }}</p>
+                </div>
             </div>
         {% endfor %}
     </div>
